--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -338,3 +338,8 @@ li.alice-carousel__stage-item.__active.__target {
 .cover-letter header {
   display: none !important;
 }
+
+.nsm7Bb-HzV7m-LgbsSe .nsm7Bb-HzV7m-LgbsSe-bN97Pc-sM5MNb {
+  font-family: 'InterTight', sans-serif !important;
+  font-weight: 700 !important;
+}
