feat: make pdf downloadablw

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -281,7 +281,7 @@ li.alice-carousel__stage-item.__active.__target {
   margin-right: 10px !important;
 }
 
-.resume-enhancements {
+.resume-enhancements, .resume-enhancements-no-formats {
   font-family: 'Times New Roman', Times, serif !important;
 }
 
@@ -290,40 +290,53 @@ li.alice-carousel__stage-item.__active.__target {
   color: #09090d !important;
 }
 
-.resume-enhancements li {
+.resume-enhancements-no-formats span.newly-added {
+  background-color: white;
+  color: #09090d !important;
+}
+
+.resume-enhancements li,
+.resume-enhancements-no-formats li {
   list-style: circle;
   margin-left: 2vw;
 }
 
-.resume-enhancements header {
+.resume-enhancements header, 
+.resume-enhancements-no-formats header{
   align-items: center;
   text-align: center;
 }
 
-.resume-enhancements a {
+.resume-enhancements a, 
+.resume-enhancements-no-formats a{
   text-decoration: underline;
 }
 
-.resume-enhancements header:first-child {
+.resume-enhancements header:first-child, 
+.resume-enhancements-no-formats  header:first-child{
   font-weight: 900;
 }
 
-.resume-enhancements h2 {
+.resume-enhancements h2 ,
+.resume-enhancements-no-formats h2{
   font-weight: 900;
   font-size: 2vh;
 }
 
-.resume-enhancements h3 {
+.resume-enhancements h3 ,
+.resume-enhancements-no-formats h3{
   font-weight: 700;
 }
 
-.resume-enhancements section p {
+.resume-enhancements section p ,
+.resume-enhancements-no-formats section p{
   display: flex !important;
   flex-direction: row !important;
   gap: 5px; /* Optional: Add space between items */
 }
 
-.no-color-formatting span {
+.no-color-formatting span ,
+.resume-enhancements-no-formats span{
   color: #000000 !important;
 }
 
